tests/ui/compile-fail/pinned_drop/no_fn.rs
use pinned_init::*;

#[pin_data(PinnedDrop)]
struct Foo {}

#[pinned_drop]
impl PinnedDrop for Foo {}

fn main() {}
