tests/ui/compile-fail/pinned_drop/no_fn.stderr
error: no rules expected `)`
 --> tests/ui/compile-fail/pinned_drop/no_fn.rs:6:1
  |
6 | #[pinned_drop]
  | ^^^^^^^^^^^^^^ no rules expected this token in macro call
  |
note: while trying to match keyword `fn`
 --> src/macros.rs
  |
  |             fn drop($($sig:tt)*) {
  |             ^^
  = note: this error originates in the attribute macro `pinned_drop` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo: PinnedDrop` is not satisfied
 --> tests/ui/compile-fail/pinned_drop/no_fn.rs:3:1
  |
3 | #[pin_data(PinnedDrop)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | the trait `PinnedDrop` is not implemented for `Foo`
  | required by a bound introduced by this call
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
